--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <script src="./index.js" type=module></script>
+    <script src="./task_1.js" type=module></script>
+    <script src="./task_2.js" type=module></script>
 </body>
 </html>
