--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
     
     <script src="./task_1.js" type=module></script>
     <script src="./task_2.js" type=module></script>
+    <script src="./task_3.js" type=module></script>
 </body>
 </html>
